main section 1 complete

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body class="font-raleway">
     <header class=" mx-32 mt-12 lg:mb-32">
         <!-- navbar -->
-        <nav class="font-raleway mb-12 ">
+        <nav class=" mb-12 ">
             <div class="navbar ">
                 <div class="navbar-start">
                     <div class="dropdown">
@@ -48,7 +48,7 @@
                 <p class="font-inter text-lg mb-20">
                     Yes, you can run unit tests and view the results directly within the app. The <br> integrated testing features allow for a streamlined .
                 </p>
-                <button class="btn btn-primary border-none rounded-xl font-bold hover:bg-white bg-[#1DD100] text-3xl text-black p-7 mb-10">Buy Tickets</button>
+                <button class="btn border-none rounded-xl font-bold hover:bg-white bg-[#1DD100] text-3xl text-black p-7 mb-10">Buy Tickets</button>
                 </div>
             </div>
         </div>
@@ -93,9 +93,9 @@
         </div>
     </header>
     <main>
-        <section class=" mx-32 text-center items-center">
-            <h2 class="font-bold text-5xl mb-12">Best offers for you</h2>
-            <div class="lg:flex justify-center lg:gap-24 ">
+        <section class=" mx-32 text-center items-center lg:mb-32">
+            <h2 class="font-bold text-5xl lg:mb-12">Best offers for you</h2>
+            <div class="lg:flex justify-center lg:gap-24 lg:mb-12">
                 <div class="flex bg-yellow-500 rounded-xl items-center font-inter">
                     <div class="p-10 items-center">
                         <h2 class="font-extrabold text-5xl">15% OFF</h2>
@@ -108,7 +108,7 @@
                         <p>cupon code</p>
                     </div>
                 </div>
-                <div class="flex bg-yellow-500 rounded-xl items-center font-inter">
+                <div class="flex bg-[#F78C9C] rounded-xl items-center font-inter">
                     <div class="p-10 items-center">
                         <h2 class="font-extrabold text-5xl">20% OFF</h2>
                         <p class="font-medium text-lg">on your next purchase</p>
@@ -119,10 +119,11 @@
                         <h2 class="font-extrabold text-4xl">COUPLE 20</h2>
                         <p>cupon code</p>
                     </div>
-                </div>
-                
+                </div> 
             </div>
+            <button class="btn font-bold text-xl text-[#1DD100] rounded-xl px-7 py-7 hover:bg-slate-50  bg-[#d9fdd366] border-[#1DD100]">See all offers</button>
         </section>
+        
     </main>
     <footer>
 
