--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="font-raleway">
-    <header class="lg:mx-32 mx-4 mt-12 lg:mb-32">
+    <header id="home-screen" class="lg:mx-32 mx-4 mt-12 lg:mb-32">
         <!-- navbar -->
         <nav class=" mb-12 ">
             <div class="navbar ">
@@ -48,7 +48,7 @@
                 <p class="font-inter text-lg mb-20">
                     Yes, you can run unit tests and view the results directly within the app. The <br> integrated testing features allow for a streamlined .
                 </p>
-                <button class="btn border-none rounded-xl font-bold hover:bg-white bg-[#1DD100] text-3xl text-black p-7 mb-10">Buy Tickets</button>
+                <button onclick="start()" class="btn border-none rounded-xl font-bold hover:bg-gray-200 hover:text-black bg-[#1DD100] text-white text-3xl p-7 mb-10">Buy Tickets</button>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </header>
     <main>
-        <section class=" lg:mx-32 text-center items-center lg:mb-32">
+        <section id="home-screen2" class=" lg:mx-32 text-center items-center lg:mb-32">
             <h2 class=" font-bold lg:text-5xl text-2xl lg:mb-12 mb-5">Best offers for you</h2>
             <div class="lg:flex justify-center lg:gap-24 lg:mb-12">
                 <div class="flex bg-yellow-500 rounded-xl items-center font-inter mb-4">
@@ -123,8 +123,8 @@
             </div>
             <button class="btn font-bold text-xl text-[#1DD100] rounded-xl px-7 py-7 hover:bg-slate-50  bg-[#d9fdd366] border-[#1DD100]">See all offers</button>
         </section>
-        <section class=" bg-[#F7F8F8] lg:rounded-t-[90px] lg:border-t-4 border-green-500">
-            <div class="lg:mx-32 m-5 lg:py-32">
+        <section id="booking-screen" class=" hidden bg-[#F7F8F8] lg:rounded-t-[90px] lg:border-t-4 border-green-500">
+            <div class="lg:mx-32 lg:py-32">
                 <h2 class="font-bold lg:text-5xl text-2xl lg:mb-12 text-center">Greenline Paribahan</h2>
                 <p class="text-center font-normal ">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
                 <!-- left -->
@@ -217,27 +217,27 @@
                         <div class="flex items-center gap-3">
                             <p>A</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A2</button>
+                                <button onclick="haldleSelect()" id="A1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A1</button>
+                                <button id="A2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A4</button>
-                        </div>
+                            <button id="A3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A3</button>
+                            <button id="A4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A4</button>
+                        </div> 
                     </div>
                     <!-- B -->
                     <div class="flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>B</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B2</button>
+                                <button id="B1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B1</button>
+                                <button id="B2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B4</button>
+                            <button id="B3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B3</button>
+                            <button id="B4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B4</button>
                         </div>
                     </div>
                     <!-- C -->
@@ -245,13 +245,13 @@
                         <div class="flex items-center gap-3">
                             <p>C</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C2</button>
+                                <button id="C1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C1</button>
+                                <button id="C2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C4</button>
+                            <button id="C3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C3</button>
+                            <button id="C4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C4</button>
                         </div>
                     </div>
                     <!-- D -->
@@ -259,13 +259,13 @@
                         <div class="flex items-center gap-3">
                             <p>D</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D2</button>
+                                <button id="D1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D1</button>
+                                <button id="D2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D4</button>
+                            <button id="D3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D3</button>
+                            <button id="D4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D4</button>
                         </div>
                     </div>
                     <!-- E -->
@@ -273,13 +273,13 @@
                         <div class="flex items-center gap-3">
                             <p>E</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E2</button>
+                                <button id="E1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E1</button>
+                                <button id="E2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E4</button>
+                            <button id="E3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E3</button>
+                            <button id="E4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E4</button>
                         </div>
                     </div>
                     <!-- F -->
@@ -287,13 +287,13 @@
                         <div class="flex items-center gap-3">
                             <p>F</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F2</button>
+                                <button id="F1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F1</button>
+                                <button id="F2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F4</button>
+                            <button id="F3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F3</button>
+                            <button id="F4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F4</button>
                         </div>
                     </div>
                     <!-- G -->
@@ -301,13 +301,13 @@
                         <div class="flex items-center gap-3">
                             <p>G</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G2</button>
+                                <button id="G1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G1</button>
+                                <button id="G2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G4</button>
+                            <button id="G3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G3</button>
+                            <button id="G4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G4</button>
                         </div>
                     </div>
                     <!-- H -->
@@ -315,13 +315,13 @@
                         <div class="flex items-center gap-3">
                             <p>H</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H2</button>
+                                <button id="H1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H1</button>
+                                <button id="H2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H4</button>
+                            <button id="H3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H3</button>
+                            <button id="H4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H4</button>
                         </div>
                     </div>
                     <!-- I -->
@@ -329,13 +329,13 @@
                         <div class="flex items-center gap-3">
                             <p class="m-[3px]">I</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I2</button>
+                                <button id="I1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I1</button>
+                                <button id="I2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I4</button>
+                            <button id="I3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I3</button>
+                            <button id="I4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I4</button>
                         </div>
                     </div>
                     <!-- J -->
@@ -343,13 +343,13 @@
                         <div class="flex items-center gap-3">
                             <p>J</p>
                             <div class="flex justify-between gap-3">
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J1</button>
-                                <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J2</button>
+                                <button id="J1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J1</button>
+                                <button id="J2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J3</button>
-                            <button class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J4</button>
+                            <button id="J3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J3</button>
+                            <button id="J4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J4</button>
                         </div>
                     </div>
                     </div>
@@ -406,7 +406,7 @@
             </div>
         </section>
     </main>
-    <footer class="  bg-[#030712] text-white lg:p-32 p-4 ">
+    <footer id="footer-section" class=" hidden bg-[#030712] text-white lg:p-32 p-4 ">
         <div class="flex justify-between ">
             <div class="">
                 <h2 class="font-extrabold lg:text-4xl text-2xl mb-5">P-Ticket</h2>
@@ -436,5 +436,7 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/utility.js"></script>
 </body>
 </html>
