--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                         
                     </div>
                 </div>                
-                <div class=" lg:flex justify-between bg-white lg:p-10 p-5 rounded-3xl">
+                <div  class=" lg:flex justify-between bg-white lg:p-10 p-5 rounded-3xl">
                     <!-- seat plan -->
-                    <div class="">
+                    <div id="seat-plan" class="">
                     <!-- 1st -->
                     <div>
                         <h2 class="font-semibold text-3xl mb-5">Select Your Seat</h2>
@@ -213,87 +213,87 @@
                     </div>
                     <!-- passengers seat -->
                      <!-- A -->
-                    <div class="flex justify-between mb-4 ">
+                    <div class=" flex justify-between mb-4 ">
                         <div class="flex items-center gap-3">
                             <p>A</p>
                             <div class="flex justify-between gap-3">
-                                <button onclick="haldleSelect()" id="A1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A1</button>
-                                <button id="A2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A2</button>
+                                <button  id="A1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">A1</button>
+                                <button id="A2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">A2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="A3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A3</button>
-                            <button id="A4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">A4</button>
+                            <button id="A3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">A3</button>
+                            <button id="A4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">A4</button>
                         </div> 
                     </div>
                     <!-- B -->
-                    <div class="flex justify-between mb-4">
+                    <div class="  flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>B</p>
                             <div class="flex justify-between gap-3">
-                                <button id="B1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B1</button>
-                                <button id="B2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B2</button>
+                                <button id="B1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">B1</button>
+                                <button id="B2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">B2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="B3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B3</button>
-                            <button id="B4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">B4</button>
+                            <button id="B3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">B3</button>
+                            <button id="B4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">B4</button>
                         </div>
                     </div>
                     <!-- C -->
-                    <div class="flex justify-between mb-4">
+                    <div class="  flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>C</p>
                             <div class="flex justify-between gap-3">
-                                <button id="C1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C1</button>
-                                <button id="C2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C2</button>
+                                <button id="C1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">C1</button>
+                                <button id="C2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">C2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="C3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C3</button>
-                            <button id="C4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">C4</button>
+                            <button id="C3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">C3</button>
+                            <button id="C4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">C4</button>
                         </div>
                     </div>
                     <!-- D -->
-                    <div class="flex justify-between mb-4">
+                    <div class="  flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>D</p>
                             <div class="flex justify-between gap-3">
-                                <button id="D1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D1</button>
-                                <button id="D2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D2</button>
+                                <button id="D1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">D1</button>
+                                <button id="D2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">D2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="D3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D3</button>
-                            <button id="D4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">D4</button>
+                            <button id="D3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">D3</button>
+                            <button id="D4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">D4</button>
                         </div>
                     </div>
                     <!-- E -->
-                    <div class="flex justify-between mb-4">
+                    <div class="  flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>E</p>
                             <div class="flex justify-between gap-3">
-                                <button id="E1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E1</button>
-                                <button id="E2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E2</button>
+                                <button id="E1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">E1</button>
+                                <button id="E2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">E2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="E3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E3</button>
-                            <button id="E4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">E4</button>
+                            <button id="E3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">E3</button>
+                            <button id="E4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">E4</button>
                         </div>
                     </div>
                     <!-- F -->
-                    <div class="flex justify-between mb-4">
+                    <div class="  flex justify-between mb-4">
                         <div class="flex items-center gap-3">
                             <p>F</p>
                             <div class="flex justify-between gap-3">
-                                <button id="F1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F1</button>
-                                <button id="F2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F2</button>
+                                <button id="F1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">F1</button>
+                                <button id="F2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">F2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="F3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F3</button>
-                            <button id="F4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">F4</button>
+                            <button id="F3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">F3</button>
+                            <button id="F4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">F4</button>
                         </div>
                     </div>
                     <!-- G -->
@@ -301,13 +301,13 @@
                         <div class="flex items-center gap-3">
                             <p>G</p>
                             <div class="flex justify-between gap-3">
-                                <button id="G1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G1</button>
-                                <button id="G2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G2</button>
+                                <button id="G1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">G1</button>
+                                <button id="G2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">G2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="G3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G3</button>
-                            <button id="G4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">G4</button>
+                            <button id="G3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">G3</button>
+                            <button id="G4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">G4</button>
                         </div>
                     </div>
                     <!-- H -->
@@ -315,13 +315,13 @@
                         <div class="flex items-center gap-3">
                             <p>H</p>
                             <div class="flex justify-between gap-3">
-                                <button id="H1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H1</button>
-                                <button id="H2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H2</button>
+                                <button id="H1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">H1</button>
+                                <button id="H2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">H2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="H3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H3</button>
-                            <button id="H4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">H4</button>
+                            <button id="H3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">H3</button>
+                            <button id="H4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">H4</button>
                         </div>
                     </div>
                     <!-- I -->
@@ -329,13 +329,13 @@
                         <div class="flex items-center gap-3">
                             <p class="m-[3px]">I</p>
                             <div class="flex justify-between gap-3">
-                                <button id="I1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I1</button>
-                                <button id="I2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I2</button>
+                                <button id="I1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">I1</button>
+                                <button id="I2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">I2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="I3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I3</button>
-                            <button id="I4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">I4</button>
+                            <button id="I3" class=" seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">I3</button>
+                            <button id="I4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">I4</button>
                         </div>
                     </div>
                     <!-- J -->
@@ -343,13 +343,13 @@
                         <div class="flex items-center gap-3">
                             <p>J</p>
                             <div class="flex justify-between gap-3">
-                                <button id="J1" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J1</button>
-                                <button id="J2" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J2</button>
+                                <button id="J1" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">J1</button>
+                                <button id="J2" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">J2</button>
                             </div>
                         </div>
                         <div class="flex justify-between gap-3">
-                            <button id="J3" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J3</button>
-                            <button id="J4" class="btn font-inter lg:w-28 lg:h-14 rounded-xl">J4</button>
+                            <button id="J3" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">J3</button>
+                            <button id="J4" class="seat-btn btn font-inter lg:w-28 lg:h-14 rounded-xl">J4</button>
                         </div>
                     </div>
                     </div>
@@ -361,15 +361,17 @@
                         <img src="images/Line 1.png" alt="">
                         <div class=" bg-[#F7F8F8] my-5 p-5 rounded-xl">
                             <div class="flex justify-between mb-5">
-                                <p class="">Seat <span class="text-green-500">0</span></p>
+                                <p class="">Seat <span id="seat-count" class=" text-green-500">0</span></p>
                                 <p class="">Class</p>
                                 <p class="">Price</p>
                             </div>
                             <img src="images/Line 1.png" alt="">
-                            <div class="flex justify-between my-5">
-                                <p class=" text-red-500">No Seat Choosen</p>
-                                <p class="hidden">Economy</p>
-                                <p class=""></p>
+                            <div id="all-seat-choosen" class="mb-3 ">
+
+                                <div id="seat-choosen" class="  flex justify-between my-4">
+                                    <p id="seat-number" class=" text-red-500">No Seat Choosen</p>
+                                </div>
+                                
                             </div>
                             <img class="sm:hidden md:hidden" src="images/Line 1.png" alt="">
                             <div class=" flex justify-between my-5">
