add total cost with javascript

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <img src="images/Line 1.png" alt="">
                             <div id="all-seat-choosen" class="mb-3 ">
 
-                                <div id="seat-choosen" class="  flex justify-between my-4">
+                                <div id="seat-choosen" class=" flex justify-between my-4">
                                     <p id="seat-number" class=" text-red-500">No Seat Choosen</p>
                                 </div>
                                 
@@ -376,7 +376,7 @@
                             <img class="sm:hidden md:hidden" src="images/Line 1.png" alt="">
                             <div class=" flex justify-between my-5">
                                 <p>Total Price</p>
-                                <p>BDT <span>0</span></p>
+                                <p>BDT <span id="total-cost">0</span></p>
                             </div>
                             <div class="flex justify-center">
                                 <input type="text" placeholder="Have any cupon?" class="input " />
