--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             </div>
                             <div class="flex justify-center bg-[#d9fdd366] w-44 h-14 rounded-xl gap-3  items-center">
                                 <div class=""><img src="images/seat-green-filled.png" alt=""></div>
-                                <p class=" font-inter font-medium lg:text-lg text-green-500">40 Seats left</p>
+                                <p  class=" font-inter font-medium lg:text-lg text-green-500"><span id="seat-left">40</span> Seats left</p>
                             </div>
                         </div>
                         <div class=" mt-3 p-5 bg-[#F7F8F8] rounded-3xl">
